test/scc_test/stmt/semantic-errors/027.t
void test()
{
    if (1)
        int a;
}